# mcu_samples

./: .gitignore  README.md
nxp/: readme.md
nxp/1060/: readme.md
nxp/1060/freertos_generic/: CMakeLists.txt
nxp/1060/freertos_hello/: CMakeLists.txt  freertos_hello.c
nxp/55S69/: readme.md
nxp/55S69/freertos_generic/: CMakeLists.txt  config.cmake  freertos_generic_v3_8.xml  readme.txt
nxp/55S69/freertos_hello/: CMakeLists.txt  freertos_hello_v3_8.xml  readme.txt
nxp/55S69/multicore_examples/hello_world/: CMakeLists.txt  readme.md
nxp/55S69/multicore_examples/hello_world/cm33_core0/: CMakeLists.txt  config.cmake  hello_world_cm33_core0_v3_8.xml  readme.txt
nxp/55S69/multicore_examples/hello_world/cm33_core1/: CMakeLists.txt  config.cmake  hello_world_cm33_core1_v3_8.xml  readme.txt
nxp/685/: readme.md
nxp/685/freertos_hello/: CMakeLists.txt
nxp/frdm-k64f/: readme.md
nxp/frdm-k64f/freertos_hello/: CMakeLists.txt
st/: readme.md
st/B-L4S5I-IOT01A/freertos_blink/: .mxproject  Makefile  STM32L4S5VITx_FLASH.ld  freertos_blink.ioc  readme.md
st/B-L4S5I-IOT01A/freertos_blink/Core/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
st/B-L4S5I-IOT01A/freertos_blink/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
